# news_chatbot

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: news_metadata.parquet  news_ui_metadata.parquet
docs/: instruction.md
duckdb/: duckdb.db
src/news_chatbot/: chats_ui.py
src/news_chatbot/data/: example.json  news_metadata.parquet  news_ui_metadata.parquet
src/news_chatbot/datasets/: __init__.py
src/news_chatbot/llm/: __init__.py
src/news_chatbot/notebooks/: test.ipynb
src/news_chatbot/openai/: __init__.py
src/news_chatbot/pipelines/: search_news.py  step1.py  step2_1.py  step2_2.py  step3.py  step4.py  step5.py
